GeneWeb version 3.04
--------------------

* GeneWeb Service/CGI (gwd)
  - [27 Mar 00] Added displaying of places/surnames from welcome page.

* Gedcom to GeneWeb (ged2gwb)
  - [31 Mar 00] Do not enter any more GIVN as public name if equal to first
    name nor SURN as surname alias if equal to surname.

GeneWeb version 3.03
--------------------

* Languages
  - [23 Jan 00] Added Russian (Konstantin Abakumov).

* Setup program (gwsetup)
  - [07 Feb 00] Changed some Swedish files (Lars Gustavsson).
  - [27 Jan 00; 03 Feb 00] Added a comment in the introduction text
    telling not to delete the window! (English, French, Swedish versions)

* GeneWeb Service/CGI (gwd)
  - [17 Mar 00] In CGI mode, the passwords are no more visible in the URL.
    Technical explanation: it works with a generated random login password
    with a timeout of 1800 seconds (half an hour), i.e. if you do nothing
    during half an hour, the login password is unactivated; this limit time is
    changeable by a new gwd option "-login_tmout". Note: this system does
    not use cookies.
  - [12 Mar 00] In ancestors page, added male and female lines.
  - [11 Mar 00] In personal pages, the images defined by external URL (i.e.
    accomodated in other Web sites) are now reduced as are local images.
  - [11 Mar 00] The information "relationship to" is no more transformed
    into "married to" when "non-friend" browsing (it was supposed to protect
    private life, but seems to have more drawbacks than advantages).
  - [09..10 Mar 00] In update family form, added ability to specify birth
    place, death date and death place for parents and children.
  - [08 Mar 00] Added latest marriages (accessible only by "wizards" and
    "friends")
  - [08 Mar 00] Added optional displaying of images in ancestors displaying
    by tree.
  - [05 Mar 00] In birthday anniversaries for close parents (accessible
    in "cousin" page for "friends" and "wizards"), the links give now the