@@ -8,6 +8,12 @@ GeneWeb version 3.04
   - [31 Mar 00] Do not enter any more GIVN as public name if equal to first
     name nor SURN as surname alias if equal to surname.
 
+* Base configuration files (base.gwf)
+  - [31 Mar 00] Added variable "places_inverted" (default no) to specify that
+    places are ordered more-general-less-general (e.g. "USA, New York"
+    instead of "New York, USA"). Important to specify correcty this variable
+    for the new displaying by places/surnames.
+
 GeneWeb version 3.03
 --------------------
 
